catch_panic/ui_tests/fail/on_struct.rs
use catch_panic::catch_panic;

#[catch_panic]
pub struct PanicDonationBox;

fn main() {}
