catch_panic/ui_tests/fail/on_struct.stderr
error: #[catch_panic] can only be applied to functions
 --> ui_tests/fail/on_struct.rs:4:1
  |
4 | pub struct PanicDonationBox;
  | ^^^
